# Weboard

./: .gitignore  Cargo.toml  Dockerfile  README.md  whiteboard.db
src/: app.rs  database.rs  main.rs  websocket.rs  whiteboard.rs
static/: index.html  script.js  style.css
