[package]
name = "weboard"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
warp = "0.3.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.3", features = ["v4"] }
futures-util = "0.3.30"
rusqlite = { version = "0.28.0", features = ["bundled"] }
log = "0.4"
env_logger = "0.10"
sha2 = "0.10.6"
